--- a/scss/base/_resets.scss
+++ b/scss/base/_resets.scss
@@ -29,10 +29,11 @@ img {
 }
 
 body {
-  font-family: "Poppins";
+  font-family: "Red Hat Text";
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: #fcf8f6;
 }
 
 h1 {
