--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,4 +7,4 @@
 @import "./components/buttons";
 @import "./layouts/footer";
 @import "./layouts/header";
-@import "./pages/home.scss";
+@import "./pages/home";
