--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -239,8 +239,58 @@ button {
 }
 .remover-btn {
 }
-.order-btn{
-  
+.order-btn {
+  padding: 16px 0;
+  border-radius: 999px;
+  background-color: $red;
+  font-weight: 600;
+  font-size: $spacing-200;
+  color: #fff;
+  line-height: 100%;
+  letter-spacing: 0%;
+  width: 100%;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #952c0b;
+  }
+}
+.neutral {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding-top: 16.5px;
+  padding-bottom: 16.5px;
+  border-radius: 8px;
+  background-color: $rose-50;
+  margin-bottom: 24px;
+  font-weight: 400;
+
+  strong {
+    font-weight: 600;
+  }
+}
+
+.order-total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+  padding-top: 8px;
+  margin-bottom: 24px;
+  span {
+    font-weight: 400;
+    font-size: map-get($text-preset-4, font-size);
+    line-height: 100%;
+    letter-spacing: 0%;
+  }
+  p {
+    font-weight: 700;
+    font-size: map-get($text-preset-2, font-size);
+    line-height: 100%;
+    letter-spacing: 0%;
+  }
 }
 
 @media (max-width: 991px) {
